# medioToSrt

./: .gitignore  README.md  agent.md  app.py  pyproject.toml  requirements.txt
src/autosrt_aligner/: __init__.py  audio.py  cli.py  errors.py  formats.py  models.py  pipeline.py  profiles.py  quality.py  splitter.py  text.py
src/autosrt_aligner/engines/: __init__.py  base.py  stable_ts.py
static/: app.js  index.html  styles.css
tests/: test_cli.py  test_formats.py  test_pipeline.py  test_splitter_quality.py  test_stable_ts_engine.py  test_text.py  test_web_app.py
