[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosrt-aligner"
version = "0.1.0"
description = "Forced-alignment SRT/VTT generator for AI narration audio and source scripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "python-multipart>=0.0.9",
  "stable-ts>=2.19.0",
  "imageio-ffmpeg>=0.5.1",
]

[project.scripts]
autosrt-aligner = "autosrt_aligner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
